# smoothscan

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac
doc/: smoothscan.1
src/: smoothscan-fontgen.py  smoothscan-fontgen.py.in  smoothscan.c  smoothscan.h
tests/: fontforge-python2.py  fontforge-python3.py
